--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,7 @@
  html,body {
   margin: 0;
   padding: 0;
-  width: 100%;
+  overflow-x: hidden;
 }
 
 
@@ -132,8 +132,6 @@
   position: absolute;
   margin-left: auto;
   margin-right: auto;
-
-  top: 20%;
   left: 0;
   right: 0;
   text-align: center;
